add&fix:添加并修改函数执行判断
