# docs/swagger.yaml
@@ -28,6 +28,14 @@ paths:
         name: repassword
         required: true
         type: string
+      - description: 手机号码
+        in: formData
+        name: phone
+        type: string
+      - description: 邮箱
+        in: formData
+        name: email
+        type: string
       responses:
         "200":
           description: '{"code","data", "msg"}'
@@ -52,22 +60,6 @@ paths:
       summary: 删除用户
       tags:
       - 用户模块
-  /user/getUser:
-    get:
-      parameters:
-      - description: id
-        in: query
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{"code","data", "msg"}'
-          schema:
-            type: string
-      summary: 获取单一用户
-      tags:
-      - 用户模块
   /user/getUserList:
     get:
       responses:
@@ -76,6 +68,33 @@ paths:
           schema:
             type: string
       summary: 获取用户列表
+      tags:
+      - 用户模块
+  /user/getUserOnly:
+    get:
+      parameters:
+      - description: id
+        in: query
+        name: id
+        type: string
+      - description: 用户名
+        in: query
+        name: name
+        type: string
+      - description: 手机号码
+        in: query
+        name: phone
+        type: string
+      - description: 邮箱
+        in: query
+        name: email
+        type: string
+      responses:
+        "200":
+          description: '{"code","data", "msg"}'
+          schema:
+            type: string
+      summary: 获取单一用户
       tags:
       - 用户模块
   /user/updateUser:
